add css and link to Sprint1 Tecnical

--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>My blog</title>
-  <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
-  </body>
+    <title>Laniyuk's blog</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css"/>
+    </head>
+<div class="header">
+  <h1>Laniyuk's Journey through Dev Academy</h1>
+</div>
+    <body>
+    <h2>Welcome to my blog!</h2>
+    <p>  
+        Throughout this site you'll be able to follow some of the many things I am learning while studying through Dev Academy.</p>
+    <p> Here is a list of links to my 'Technical' and 'Core' blog posts.</p>
+    </body>
+  
+    <div>
+    <h3>Technical Blog!</h3>
+    <p>A place where I attempt to understand the ever expanding world of Tech through the greatest cat in the World, Dante!</p>
+  <ol class="thin-maroon-border honeydew-background">
+  <li><a href="sprint1-technical.html">Sprint-2 Technical</a></li>
+  <li><a href="no.2">No.2</a></li>
+  <li><a href="no.3">No.3</a></li>
+</ol>
+</div>
+<h4>Core!</h4>
+<p> Reflections and self-interrogation to keep my bullshit to a minimum</p>
+<div>
+<ol class="thin-maroon-border honeydew-background list-position" >
+  <li position: relative><a href="blog/sprint1-technical.html">Sprint-1 Cultural blog</a></li>
+  <li><a href="Sprint2-cultural blog">Sprint-2 Cultural blog</a></li>
+  <li><a href="Sprint3-cultural blog">Sprint-3 Cultural blog</a></li>
+</ol>
+</p> 
+</div>
 </html>
