--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Laniyuk's blog</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css"/>
+    <link rel='icon' href="images/Asset 2.svg" type='image/x-icon'/ >
     </head>
 <div class="header">
   <h1>Laniyuk's Journey through Dev Academy</h1>
@@ -17,7 +18,7 @@
     <div>
     <h3>Technical Blog!</h3>
     <p>A place where I attempt to understand the ever expanding world of Tech through the greatest cat in the World, Dante!</p>
-  <ol class="thin-maroon-border honeydew-background">
+  <ol class="thin-maroon-border ochre-yellow">
   <li><a href="sprint1-technical.html">Sprint-2 Technical</a></li>
   <li><a href="no.2">No.2</a></li>
   <li><a href="no.3">No.3</a></li>
@@ -26,7 +27,7 @@
 <h4>Core!</h4>
 <p> Reflections and self-interrogation to keep my bullshit to a minimum</p>
 <div>
-<ol class="thin-maroon-border honeydew-background list-position" >
+<ol class="thin-maroon-border ochre-yellow list-position" >
   <li position: relative><a href="blog/sprint1-technical.html">Sprint-1 Cultural blog</a></li>
   <li><a href="Sprint2-cultural blog">Sprint-2 Cultural blog</a></li>
   <li><a href="Sprint3-cultural blog">Sprint-3 Cultural blog</a></li>
