minor edits- links to technical pages added

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <h3>Technical Blog!</h3>
     <p>A place where I attempt to understand the ever expanding world of Tech through the greatest cat in the World, Dante!</p>
   <ol class="thin-maroon-border ochre-yellow">
-  <li><a href="sprint1-technical.html">Sprint-2 Technical</a></li>
-  <li><a href="no.2">No.2</a></li>
-  <li><a href="no.3">No.3</a></li>
+  <li><a href="blog/sprint1-technical.html">Sprint-2 Technical</a></li>
+  <li><a href="blog/sprint3-technical.html">Sprint-3 Technical</a></li>
+  <li><a href="no.3">Sprint-4 Technical</a></li>
 </ol>
 </div>
 <h4>Core!</h4>
@@ -29,7 +29,7 @@
 <div>
 <ol class="thin-maroon-border ochre-yellow list-position" >
   <li position: relative><a href="blog/sprint1-technical.html">Sprint-1 Cultural blog</a></li>
-  <li><a href="Sprint2-cultural blog">Sprint-2 Cultural blog</a></li>
+  <li><a href="blog/sprint3-technical.html">Sprint-2 Cultural blog</a></li>
   <li><a href="Sprint3-cultural blog">Sprint-3 Cultural blog</a></li>
 </ol>
 </p> 
