all links added to index

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <p> Reflections and self-interrogation to keep my bullshit to a minimum</p>
 <div>
 <ol class="thin-maroon-border ochre-yellow list-position" >
-  <li position: relative><a href="blog/sprint1-technical.html">Sprint-1 Cultural blog</a></li>
-  <li><a href="blog/sprint3-technical.html">Sprint-2 Cultural blog</a></li>
-  <li><a href="Sprint3-cultural blog">Sprint-3 Cultural blog</a></li>
+  <li position: relative><a href="sprint1-cultural.html">Sprint-1 Cultural blog</a></li>
+  <li><a href="sprint2-cultural.html">Sprint-2 Cultural blog</a></li>
+  <li><a href="sprint3-cultural.html">Sprint-3 Cultural blog</a></li>
 </ol>
 </p> 
 </div>
