--- a/sprint1-cultural.html
+++ b/sprint1-cultural.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Sprint1-Cultural</title>
         <link href="styles/main.css" rel="stylesheet" type="text/css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +21,7 @@
 <p>As a writer and a poet I perform almost weekly as a one of my main forms of income. A 
     little over a year ago I realized that most of the venues I was performing in weren’t
      wheelchair accessible. Accessibility (physical, intellectual, financial etc) is something 
-     I value a prioritise. I couldn’t continue to perform in spaces that were literally built
+     I value and prioritise. I couldn’t continue to perform in spaces that were literally built
       to exclude a demographic of people, whether that was intentional or not. I also didn’t 
       want to continue participating in artist spaces that didn’t consider the accessibility 
       needs of the Disabled community. I felt it was my responsibility as an able-bodied person 
