--- a/sprint3-cultural.html
+++ b/sprint3-cultural.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
     <head>
+        <title>Sprint3-Cultural</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -47,7 +48,7 @@
             there women in more high paying leadership roles? Winning Grammy's or Nobel prizes? Emotional intelligence might make you a 
             good employee but I don't think it equates to access to power. I question Dev Academys intent in preparing us for the work place. 
             As women, were are conditioned from a young age to be 'nice' and 'palatable', often  sacrificing our own wants and needs to not 
-            be more unlikeable. I don't this task on emotional intelligence is particularly useful for most non-cis white men but rather is further 
+            be more unlikeable. I don't think this task on emotional intelligence is particularly useful for most non-cis white men but rather is further 
             grooming us to be more receptive to the over bearing needs of our superiors. I also don't think that having a high EQ
             means that you necessarily CARE for others, but that you are able to emotionally manipulate youreself and others.</p>
     </body>
